# screen-sanctum

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  screensanctum.spec
docs/: gumroad_listing.md  smoke_test_plan.md
scripts/: build.ps1  build.sh  build_unix.sh  build_win.ps1
src/screensanctum/: __init__.py  app.py  cli.py
src/screensanctum/api/: __init__.py  models.py  security.py  server.py
src/screensanctum/batch/: __init__.py  audit_logger.py  batch_processor.py
src/screensanctum/core/: __init__.py  config.py  database.py  detection.py  image_loader.py  ocr.py  redaction.py  regions.py
src/screensanctum/licensing/: __init__.py  license_check.py  license_store.py
src/screensanctum/ui/: __init__.py  batch_dialog.py  image_canvas.py  main_window.py  sidebar.py  utils.py
src/screensanctum/workers/: __init__.py  celery_app.py  tasks.py
templates/: bug_report_safe.sctmpl.json  docs_and_email.sctmpl.json  social_share_safe.sctmpl.json
tests/: __init__.py  test_detection.py  test_redaction.py  test_regions.py
